[EFL] fix efreet error https://bugs.webkit.org/show_bug.cgi?id=143670

Reviewed by Gyuyoung Kim.

Fix efreet error by using external variable efreet_cache_update.
As 0 value of efreet_cache_update prevents monitoring of icon and desktop cache,
efreet error for efreet_cache does not occur.

* MiniBrowser/efl/main.c:
(elm_main):


Canonical link: https://commits.webkit.org/163259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184691 268f45cc-cd09-0410-ab3c-d52691b4dbfc